--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-  <title>Untitled</title>
+  <title>Fork this</title>
   <style type="text/css">
     * {
       margin:0px;
@@ -32,7 +32,7 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <p>
-  Fork me? No, fork you!
+  Fork me? No, fork you! Fork ya's all....
 </p>
 
 </body>
